--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build:cypress": "cross-env CYPRESS_SUPPORT=y yarn build",
     "start": "gatsby develop",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "deploy": "gatsby build --prefix-paths && gh-pages -f -d public"
   },
   "dependencies": {
     "@lekoarts/gatsby-theme-minimal-blog": "^6.0.5",
@@ -30,6 +31,7 @@
     "@types/react": "^18.2.9",
     "@types/react-dom": "^18.2.4",
     "cross-env": "^7.0.3",
+    "gh-pages": "^5.0.0",
     "typescript": "^4.9.5"
   }
 }
